--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:roundIcon="@drawable/reshot_icon_news_xzmdeab2ur"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidJavaProjects"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
             android:name=".NewsDetailActivity"
