--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,10 @@ dependencies {
 
     //Architecture components
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    //Retrofit
+    implementation 'com.squareup.picasso:picasso:2.8'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+
 }
